--- a/src/main/resources/static/style/header.css
+++ b/src/main/resources/static/style/header.css
@@ -1,40 +1,45 @@
-body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-}
+/* header.css */
 
 header {
-    background-color: #004AAD;
-    color: #f9f9f9;
-    padding: 20px; /* 헤더 높이를 키우기 위해 패딩을 더 크게 설정 */
-    text-align: center;
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    border-bottom: 1px solid #ccc;
 }
 
 header h1 {
     margin: 0;
-    font-size: 36px; /* 텍스트 크기를 더 크게 설정 */
 }
 
-header h1 a {
-    color: #f9f9f9;
+header a {
     text-decoration: none;
 }
 
-header .logout-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background-color: #004AAD;
-    color: #f9f9f9;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
+header img {
+    width: 200px;
+    height: 50px;
 }
 
-header .logout-button:hover {
-    background-color: #003080;
+header button {
+    background-color: #004AAD;
+    border: 2px solid #004AAD;
+    color: white;
+    padding: 5px 10px; /* 패딩 크기 줄임 */
+    font-size: 14px; /* 폰트 크기 줄임 */
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    position: absolute; /* 로그아웃 버튼을 절대 위치로 설정 */
+    top: 10px; /* 상단 여백 설정 */
+    right: 20px; /* 오른쪽 여백 설정 */
+}
+
+header button:hover {
+    background-color: #004AAD;
+    color: white;
+}
+
+header button:focus {
+    outline: none;
 }
