--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -1,6 +1,3 @@
-/* main.css */
-
-/* 전체 바디 스타일 설정 */
 body {
     font-family: Arial, sans-serif;
     font-size: 16px;
@@ -9,14 +6,12 @@ body {
     overflow-y: auto; /* 전체 스크롤만 활성화 */
 }
 
-/* 메인 섹션 스타일 설정 */
 main {
     display: flex;
     flex-direction: row;
     min-height: 100vh; /* 최소 높이를 100vh로 설정하여 화면 전체를 차지하도록 함 */
 }
 
-/* 사이드바 스타일 설정 */
 .sidebar {
     width: 20%;
     padding: 20px;
@@ -26,33 +21,33 @@ main {
     background-color: #f9f9f9;
     margin-right: 20px;
     overflow: auto;
-    position: relative; /* 자식 요소 절대 위치 설정을 위한 상대 위치 설정 */
+    position: relative;
 }
 
-/* 회원 정보 섹션 스타일 설정 */
+
 .member-info {
-    width: 80%; /* 가로 폭을 사이드바에 맞춤 */
-    background-color: #e0e0e0; /* 회색 배경 */
-    padding: 10px; /* 패딩 조정 */
+    width: 80%;
+    background-color: #e0e0e0;
+    padding: 10px;
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 5px;
-    text-align: center; /* 텍스트 가운데 정렬 */
-    position: absolute; /* 절대 위치 설정 */
-    bottom: 20px; /* 사이드바 맨 아래에 배치 */
+    text-align: center;
+    position: absolute;
+    bottom: 20px;
 }
 
 .member-info .profile-image {
-    width: 40px; /* 프로필 이미지 크기 조정 */
+    width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-bottom: 5px; /* 마진 줄임 */
+    margin-bottom: 5px;
 }
 
 .member-info .member-id {
     font-weight: bold;
-    margin-bottom: 5px; /* 마진 줄임 */
-    font-size: 14px; /* 폰트 크기 조정 */
+    margin-bottom: 5px;
+    font-size: 14px;
 }
 
 .member-info .info-update {
@@ -71,7 +66,6 @@ main {
 .member-info .info-update:hover {
     background-color: #003080;
 }
-
 
 .sidebar input {
     width: 100%;
@@ -142,39 +136,36 @@ main {
 }
 
 /* 각 컬럼의 고정 너비를 설정 */
-.result-section th:nth-child(1), .result-section td:nth-child(1),
-.detail-section th:nth-child(1), .detail-section td:nth-child(1) {
+.result-section th:nth-child(1), .result-section td:nth-child(1) {
+    width: 10%; /* 북마크 컬럼 */
+}
+
+.result-section th:nth-child(2), .result-section td:nth-child(2) {
     width: 15%; /* 환자 코드 컬럼 */
 }
 
-.result-section th:nth-child(2), .result-section td:nth-child(2),
-.detail-section th:nth-child(2), .detail-section td:nth-child(2) {
+.result-section th:nth-child(3), .result-section td:nth-child(3) {
     width: 20%; /* 환자 이름 컬럼 */
 }
 
-.result-section th:nth-child(3), .result-section td:nth-child(3),
-.detail-section th:nth-child(3), .detail-section td:nth-child(3) {
+.result-section th:nth-child(4), .result-section td:nth-child(4) {
     width: 10%; /* 검사 장비 컬럼 */
 }
 
-.result-section th:nth-child(4), .result-section td:nth-child(4),
-.detail-section th:nth-child(4), .detail-section td:nth-child(4) {
+.result-section th:nth-child(5), .result-section td:nth-child(5) {
     width: 25%; /* 검사 부위 컬럼 */
 }
 
-.result-section th:nth-child(5), .result-section td:nth-child(5),
-.detail-section th:nth-child(5), .detail-section td:nth-child(5) {
+.result-section th:nth-child(6), .result-section td:nth-child(6) {
     width: 10%; /* 검사 날짜 컬럼 */
 }
 
-.result-section th:nth-child(6), .result-section td:nth-child(6),
-.detail-section th:nth-child(6), .detail-section td:nth-child(6) {
-    width: 10%; /* 판독 상태 컬럼 */
+.result-section th:nth-child(7), .result-section td:nth-child(7) {
+    width: 5%; /* 판독 상태 컬럼 */
 }
 
-.result-section th:nth-child(7), .result-section td:nth-child(7),
-.detail-section th:nth-child(7), .detail-section td:nth-child(7) {
-    width: 10%; /* Verify 컬럼 */
+.result-section th:nth-child(8), .result-section td:nth-child(8) {
+    width: 5%; /* Verify 컬럼 */
 }
 
 .pagination {
