--- a/src/main/resources/static/style/study.css
+++ b/src/main/resources/static/style/study.css
@@ -13,19 +13,32 @@
 }
 #main-viewer {
     width: 80%;
-    height: 100%;
+    height: 100vh;
     float: right;
+    background-color: #000;
+}
+
+#viewportGrid{
+    width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: #000;
+
 }
+
 .viewport {
     width: 100%;
     height: 100%;
     border: 1px solid #fff;
     margin: 0.5%;
 }
+
 .thumbnail img {
     width: 100%;
+}
+
+.viewport div{
+    display: flex;
+    justify-content: center;
 }
