add : 도구 클릭시 변경, 뷰포트 갯수 설정

--- a/src/main/resources/static/style/study.css
+++ b/src/main/resources/static/style/study.css
@@ -42,3 +42,25 @@
     display: flex;
     justify-content: center;
 }
+
+#check-row-column-by-series{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 500px;
+    height: 500px;
+    gap: 5px;
+    padding: 5px;
+    background-color: #333333;
+}
+
+.row-column-box{
+    width: 94px;
+    height: 94px;
+    background-color: blue;
+}
+
+.row-column-box:hover{
+    cursor: pointer;
+    background-color: black;
+}
