--- a/src/main/resources/static/style/study.css
+++ b/src/main/resources/static/style/study.css
@@ -47,20 +47,24 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 500px;
-    height: 500px;
-    gap: 5px;
-    padding: 5px;
+    width: 100px;
+    height: 100px;
+    gap: 3px;
+    padding: 3px;
     background-color: #333333;
 }
 
 .row-column-box{
-    width: 94px;
-    height: 94px;
+    width: 16px;
+    height: 16px;
     background-color: blue;
 }
 
 .row-column-box:hover{
     cursor: pointer;
+}
+
+.row-column-box.highlight{
     background-color: black;
 }
+
