modify : 버튼위치 수정

--- a/src/main/resources/static/style/note.css
+++ b/src/main/resources/static/style/note.css
@@ -77,10 +77,11 @@ body {
 }
 
 .btn-container {
+    width: 50%;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
     gap: 20px;
-    margin-top: 20px;
+    margin: 20px auto 0 auto;
 }
 
 input[type="text"] {
