--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -136,7 +136,7 @@ main {
 
 /* 각 컬럼의 고정 너비를 설정 */
 .result-section th:nth-child(1), .result-section td:nth-child(1) {
-    width: 10%; /* 북마크 컬럼 */
+    width: 5%; /* 북마크 컬럼 */
 }
 
 .result-section th:nth-child(2), .result-section td:nth-child(2) {
@@ -148,7 +148,7 @@ main {
 }
 
 .result-section th:nth-child(4), .result-section td:nth-child(4) {
-    width: 10%; /* 검사 장비 컬럼 */
+    width: 7%; /* 검사 장비 컬럼 */
 }
 
 .result-section th:nth-child(5), .result-section td:nth-child(5) {
@@ -156,14 +156,18 @@ main {
 }
 
 .result-section th:nth-child(6), .result-section td:nth-child(6) {
-    width: 10%; /* 검사 날짜 컬럼 */
+    width: 8%; /* 검사 날짜 컬럼 */
 }
 
 .result-section th:nth-child(7), .result-section td:nth-child(7) {
-    width: 10%; /* 판독 상태 컬럼 */
+    width: 8%; /* AI 상태 컬럼 */
 }
 
 .result-section th:nth-child(8), .result-section td:nth-child(8) {
+    width: 7%; /* 판독 상태 컬럼 */
+}
+
+.result-section th:nth-child(9), .result-section td:nth-child(9) {
     width: 5%; /* Verify 컬럼 */
 }
 
