--- a/src/main/resources/static/style/header.css
+++ b/src/main/resources/static/style/header.css
@@ -1,5 +1,4 @@
 /* header.css */
-
 header {
     display: flex;
     justify-content: space-between;
@@ -20,6 +19,11 @@ header img {
     height: 50px;
 }
 
+.header-buttons {
+    display: flex;
+    align-items: center;
+}
+
 header button {
     background-color: #004AAD;
     border: 2px solid #004AAD;
@@ -29,14 +33,12 @@ header button {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
-    margin-right: 20px;
-    /*position: absolute; !* 로그아웃 버튼을 절대 위치로 설정 *!*/
-    /*top: 10px; !* 상단 여백 설정 *!*/
-    /*right: 20px; !* 오른쪽 여백 설정 *!*/
+    margin-right: 10px; /* 오른쪽 마진 설정 */
+    margin-left: 0;
 }
 
 header button:hover {
-    background-color: #004AAD;
+    background-color: #003A7D;
     color: white;
 }
 
