--- a/src/main/resources/static/style/study.css
+++ b/src/main/resources/static/style/study.css
@@ -1,5 +1,10 @@
+#main-content{
+    width: 90%;
+    margin: auto;
+}
 #thumbnail-list {
-    margin-left: 50px;
+    /*margin-left: 50px;*/
+    margin-right: 10px;
     padding: 20px;
     width:15%;
     display: flex;
@@ -20,9 +25,9 @@
     margin-bottom: 5px;
 }
 #main-viewer {
-    width: 79%;
+    width: 84%;
     height: 100vh;
-    margin-right: 50px;
+    /*margin-right: 50px;*/
 
     float: right;
     background-color: #f9f9f9;
@@ -70,7 +75,7 @@
     position: absolute;
     left: 510px;
     top:50px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .row-column-box{
@@ -117,11 +122,11 @@
     position: absolute;
     left: 450px;
     top:50px;
-    z-index: 1;
+    z-index: 2;
 }
 
 #top-bar{
-    margin: 10px 50px;
+    margin: 10px 0px;
     padding: 10px;
     display: flex;
     flex-direction: row;
