--- a/src/main/resources/static/style/study.css
+++ b/src/main/resources/static/style/study.css
@@ -13,6 +13,7 @@
     border-radius: 10px;
     /*color: #fff;*/
     height: 100vh;
+    z-index: 10; /* 추가된 z-index */
 }
 .thumbnail {
     width: 100%;
@@ -23,14 +24,27 @@
     width: 79%;
     height: 100vh;
     margin-right: 50px;
-
+    position: relative;
     float: right;
     background-color: #f9f9f9;
     border: 1px solid #ccc;
     border-radius: 5px;
+    z-index: 5; /* 추가된 z-index */
 }
 
+#overlay {
+    /*width: 500px;*/
+    /*height: 500px; !* main-viewer와 동일한 크기 *!*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 10;
+}
 #viewportGrid{
+    position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -45,6 +59,9 @@
     border: 1px solid #ccc;
     margin: 0.5%;
     background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .thumbnail img {
@@ -54,6 +71,8 @@
 .viewport div{
     display: flex;
     justify-content: center;
+    position: relative;
+
 }
 
 #check-row-column-by-series{
@@ -70,7 +89,7 @@
     position: absolute;
     left: 510px;
     top:50px;
-    z-index: 1;
+    z-index: 20;
 }
 
 .row-column-box{
@@ -117,7 +136,7 @@
     position: absolute;
     left: 450px;
     top:50px;
-    z-index: 1;
+    z-index: 15; /* 추가된 z-index */
 }
 
 #top-bar{
