--- a/src/main/resources/static/style/study.css
+++ b/src/main/resources/static/style/study.css
@@ -18,7 +18,6 @@
     border-radius: 10px;
     /*color: #fff;*/
     height: 100vh;
-    z-index: 10; /* 추가된 z-index */
 }
 .thumbnail {
     width: 100%;
@@ -28,28 +27,15 @@
 #main-viewer {
     width: 84%;
     height: 100vh;
-    margin-right: 50px;
-    position: relative;
+    /*margin-right: 50px;*/
+
     float: right;
     background-color: #f9f9f9;
     border: 1px solid #ccc;
     border-radius: 5px;
-    z-index: 5; /* 추가된 z-index */
 }
 
-#overlay {
-    /*width: 500px;*/
-    /*height: 500px; !* main-viewer와 동일한 크기 *!*/
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 10;
-}
 #viewportGrid{
-    position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -64,9 +50,6 @@
     border: 1px solid #ccc;
     margin: 0.5%;
     background-color: black;
-    position: absolute;
-    top: 0;
-    left: 0;
 }
 
 .thumbnail img {
@@ -76,8 +59,6 @@
 .viewport div{
     display: flex;
     justify-content: center;
-    position: relative;
-
 }
 
 #check-row-column-by-series{
@@ -94,7 +75,7 @@
     position: absolute;
     left: 510px;
     top:50px;
-    z-index: 20;
+    z-index: 2;
 }
 
 .row-column-box{
@@ -141,7 +122,7 @@
     position: absolute;
     left: 450px;
     top:50px;
-    z-index: 15; /* 추가된 z-index */
+    z-index: 2;
 }
 
 #top-bar{
